# agent-assembly

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml  codecov.yml  deny.toml  lefthook.toml  rustfmt.toml  sonar-project.properties
aa-api/: Cargo.toml
aa-api/src/: config.rs  error.rs  events.rs  lib.rs  openapi.rs  pagination.rs  replay.rs  server.rs  shutdown.rs  state.rs  trace_store.rs
aa-api/src/alerts/: capture.rs  mod.rs  store.rs
aa-api/src/auth/: api_key.rs  config.rs  jwt.rs  mod.rs  rate_limit.rs  scope.rs
aa-api/src/middleware/: compression.rs  cors.rs  mod.rs  request_id.rs  tracing.rs
aa-api/src/models/: event.rs  event_type.rs  mod.rs  trace.rs  ws_payloads.rs
aa-api/src/routes/: agents.rs  alerts.rs  approvals.rs  auth.rs  costs.rs  health.rs  logs.rs  mod.rs  policies.rs  traces.rs
aa-api/src/ws/: handler.rs  mod.rs  params.rs
aa-api/tests/: agents.rs  alerts.rs  approvals.rs  auth_api_key.rs  auth_bypass.rs  auth_jwt.rs  auth_rate_limit.rs  auth_scope.rs  costs.rs  error_response.rs  event_broadcast.rs  event_type_filter.rs  health.rs  logs.rs  openapi_spec.rs  policies.rs  replay_buffer.rs  trace_store.rs  traces.rs  ws_streaming.rs
aa-api/tests/common/: mod.rs
aa-cli/: Cargo.toml
aa-cli/src/: client.rs  config.rs  error.rs  lib.rs  main.rs  output.rs  policy.rs
aa-cli/src/commands/: completion.rs  context.rs  logs.rs  mod.rs  run.rs  version.rs
aa-cli/tests/: agent_suspend_resume.rs  alerts.rs  audit_list_export.rs  logs_follow.rs  policy_apply.rs
aa-core/: Cargo.toml
aa-core/benches/: scanner_bench.rs
aa-core/src/: agent.rs  audit.rs  dev_tool.rs  evaluators.rs  identity.rs  lib.rs  policy.rs  scanner.rs  time.rs
aa-ebpf/: Cargo.toml  README.md  build.rs
aa-ebpf-probes/: Cargo.toml  rust-toolchain.toml
aa-ebpf-probes/.cargo/: config.toml
aa-ebpf-probes/src/: exec_probes.rs  helpers.rs  main.rs  maps.rs  ssl_probes.rs
aa-ebpf/src/: alert.rs  error.rs  events.rs  kprobe.rs  lib.rs  lineage.rs  loader.rs  maps.rs  ringbuf.rs  shell_detect.rs  syscall.rs  tracepoint.rs  uprobe.rs
aa-ebpf/src/kprobes/: mod.rs  openat.rs  read.rs  rename.rs  unlink.rs  write.rs
aa-ebpf/tests/: exec_tracepoint.rs  file_io_events.rs  kprobe_manager.rs  load_hello.rs  path_blocklist.rs  tls_capture.rs  tls_uprobe.rs
aa-ffi-node/: Cargo.toml
aa-ffi-node/src/: lib.rs
aa-ffi-python/: Cargo.toml
aa-ffi-python/benches/: sdk_bench.rs
aa-ffi-python/python/aa_hooks/: __init__.py  openai.py
aa-ffi-python/python/tests/: test_openai_hook.py
aa-ffi-python/src/: codec.rs  config.rs  detect.rs  handle.rs  hooks.rs  ipc.rs  lib.rs
aa-gateway/: Cargo.toml
aa-gateway/benches/: REPORT.md  policy_cascade.rs  policy_check.rs
aa-gateway/src/: audit.rs  audit_reader.rs  lib.rs  main.rs  server.rs
aa-gateway/src/anomaly/: baseline.rs  detector.rs  mod.rs  responder.rs  types.rs
aa-gateway/src/budget/: mod.rs  persistence.rs  pricing.rs  tracker.rs  types.rs
aa-gateway/src/engine/: budget.rs  cache.rs  decision.rs  mod.rs  rate_limit.rs  scope_index.rs  watcher.rs
aa-gateway/src/events/: delivery.rs  mod.rs  publisher.rs  startup.rs  webhook.rs
aa-gateway/src/policy/: document.rs  error.rs  expr.rs  mod.rs  raw.rs  scope.rs  validator.rs
aa-gateway/src/registry/: convert.rs  lineage.rs  mod.rs  store.rs  token.rs
aa-gateway/src/service/: approval_service.rs  audit_service.rs  convert.rs  lifecycle_service.rs  mod.rs  policy_service.rs
aa-gateway/src/simulation/: engine.rs  error.rs  live.rs  mod.rs  replay.rs  report.rs
aa-gateway/tests/: anomaly_spike_test.rs  approval_flow_test.rs  approval_service_test.rs  audit_channel_test.rs  audit_integration_test.rs  audit_test.rs  budget_persistence_test.rs  cascade_collect_test.rs  cascade_epoch_test.rs  cascade_merge_test.rs  cascade_version_test.rs  lifecycle_service_test.rs  policy_latency_test.rs  policy_service_test.rs  registry_test.rs  scope_index_fixtures_test.rs  service_convert_test.rs  webhook_delivery_test.rs
aa-proto/: Cargo.toml  build.rs
aa-proto/src/: lib.rs
aa-proxy/: Cargo.toml
aa-proxy/benches/: intercept_bench.rs
aa-proxy/src/: config.rs  error.rs  lib.rs  main.rs
aa-proxy/src/intercept/: detect.rs  event.rs  extract.rs  mod.rs
aa-proxy/src/proxy/: mod.rs
aa-proxy/src/tls/: ca.rs  cert.rs  keychain.rs  mod.rs
aa-proxy/tests/: pipeline_emission.rs  proxy_integration.rs
aa-runtime/: Cargo.toml  Dockerfile
aa-runtime/src/: approval.rs  config.rs  ebpf_bridge.rs  gateway_client.rs  health.rs  layer.rs  lib.rs  lifecycle.rs  main.rs  policy.rs  runtime.rs
aa-runtime/src/correlation/: config.rs  engine.rs  event.rs  mod.rs  outcome.rs  pid.rs  window.rs
aa-runtime/src/health/: mod.rs
aa-runtime/src/ipc/: codec.rs  message.rs  mod.rs  server.rs
aa-runtime/src/pipeline/: event.rs  metrics.rs  mod.rs
aa-wasm/: Cargo.toml
aa-wasm/src/: lib.rs
conformance/: Cargo.toml  README.md
conformance/runner/: requirements.txt  runner.py
conformance/src/: lib.rs
conformance/tests/: credential_detection.rs  ipc_framing.rs  message_serialization.rs  policy_query.rs  session_lifecycle.rs
conformance/vectors/credential_detection/: api_keys_anthropic.json  api_keys_aws.json  api_keys_azure.json  api_keys_gcp.json  api_keys_openai.json  auth_tokens_github_app.json  auth_tokens_github_pat.json  auth_tokens_slack_bot.json  auth_tokens_slack_oauth.json  auth_tokens_slack_user.json  db_urls_mongodb.json  db_urls_mysql.json  db_urls_postgres.json  entropy_false_positive_clean.json  entropy_high_token.json  pii_credit_card.json  pii_email.json  pii_ssn.json  private_keys_ec.json  private_keys_generic.json  private_keys_openssh.json  private_keys_pgp.json  private_keys_rsa.json
conformance/vectors/ipc_framing/: 01_empty_message.json  02_single_field.json  03_multi_field.json  04_length_127_max_single_byte_varint.json  05_length_128_min_two_byte_varint.json  06_length_300_two_byte_varint.json  07_edge_stream_split_mid_varint.json  08_edge_stream_split_mid_body.json  (+2 more)
examples/aa-devtool-sample-myeditor/: Cargo.toml
(+187 files in other folders)
