[package]
name = "aa-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP presentation layer with OpenAPI spec generation for Agent Assembly"

[dependencies]
aa-core = { path = "../aa-core" }
aa-gateway = { path = "../aa-gateway" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

[lints]
workspace = true
