[package]
name = "aa-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP presentation layer with OpenAPI spec generation for Agent Assembly"

[dependencies]
aa-core = { path = "../aa-core" }
aa-gateway = { path = "../aa-gateway" }
aa-runtime = { path = "../aa-runtime" }
axum = "0.7"
http = "1"
hyper = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip", "request-id", "util", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
axum-test = "16"
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
