[package]
name = "aa-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "aasm — command-line tool for Agent Assembly"

[[bin]]
name = "aasm"
path = "src/main.rs"

[dependencies]
aa-core        = { path = "../aa-core" }
aa-gateway     = { path = "../aa-gateway" }
clap           = { version = "4", features = ["derive"] }
clap_complete  = "4"
comfy-table    = "7"
dirs           = "6"
reqwest        = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
serde_yaml     = "0.9"
thiserror      = "2"
tokio          = { version = "1", features = ["full"] }

[lints]
workspace = true
