[package]
name = "aa-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "aasm — command-line tool for Agent Assembly"

[[bin]]
name = "aasm"
path = "src/main.rs"

[dependencies]
aa-core        = { path = "../aa-core" }
aa-gateway     = { path = "../aa-gateway" }
chrono         = { version = "0.4", features = ["serde"] }
clap           = { version = "4", features = ["derive"] }
clap_complete  = "4"
colored        = "3"
csv            = "1"
comfy-table    = "7"
console        = "0.15"
crossterm      = "0.28"
dirs           = "6"
futures-util   = "0.3"
owo-colors     = "4"
ratatui        = { version = "0.29", features = ["crossterm"] }
reqwest        = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
serde_yaml     = "0.9"
thiserror      = "2"
tokio          = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
url            = "2"
uuid           = { version = "1", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
wiremock       = "0.6"

[lints]
workspace = true
