[package]
name = "aa-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure domain logic for Agent Assembly — no_std compatible"

[dependencies]
cfg-if = "1"
serde  = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }

[features]
default = ["std"]
std     = ["alloc"]
alloc   = []
serde   = ["dep:serde"]

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
