[package]
name = "aa-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure domain logic for Agent Assembly — no_std compatible"

[dependencies]
aho-corasick = { version = "1", optional = true }
async-trait  = { version = "0.1", optional = true }
cfg-if = "1"
serde  = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }
sha2   = { version = "0.11", default-features = false, optional = true }
thiserror = { version = "2", optional = true }

[features]
default    = ["std"]
std        = ["alloc", "dep:aho-corasick", "dep:async-trait", "dep:thiserror", "serde?/std"]
alloc      = ["dep:sha2"]
serde      = ["dep:serde"]
test-utils = []

[dev-dependencies]
criterion  = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[[bench]]
name    = "scanner_bench"
harness = false

[lints]
workspace = true
