[package]
name = "aa-ebpf-probes"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
aa-ebpf-common = { path = "../aa-ebpf-common" }
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"

# BPF programs are no_std binaries; there is no std or test harness.
[[bin]]
name = "aa-file-io"
path = "src/main.rs"

# Declare this crate as its own standalone workspace so Cargo does not
# attempt to include it in the parent agent-assembly workspace.
[workspace]
