[package]
name = "aa-ebpf"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "eBPF-based kernel-level monitoring hooks for Agent Assembly"

[dependencies]
aa-core = { path = "../aa-core" }
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"

[build-dependencies]
aya-build = "0.1"

[lints]
workspace = true
