[package]
name = "aa-ebpf"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "eBPF-based kernel-level monitoring hooks for Agent Assembly"

[dependencies]
aa-core        = { path = "../aa-core" }
aa-ebpf-common = { path = "../aa-ebpf-common" }
tokio          = { version = "1", features = ["rt", "signal"] }

[target.'cfg(target_os = "linux")'.dependencies]
aya     = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"

[lints]
workspace = true
