[package]
name = "aa-ebpf"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "eBPF-based kernel-level monitoring hooks for Agent Assembly"

[dependencies]
aa-core = { path = "../aa-core" }

# aya is Linux-only: it uses libc symbols (CLOCK_BOOTTIME, etc.) absent on macOS/Windows.
# The build-dep (aya-build) is unconditional so build.rs always compiles; the actual
# BPF compilation call inside build.rs is gated with #[cfg(target_os = "linux")].
[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"

[features]
# Enables integration tests that load BPF programs into a live kernel.
# Requires root (CAP_BPF + CAP_PERFMON). Only meaningful on Linux.
# Usage: cargo test -p aa-ebpf --features integration-test --test load_hello
integration-test = []

[lints]
workspace = true
