[package]
name = "aa-ffi-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python FFI bindings for Agent Assembly via PyO3"

[lib]
crate-type = ["cdylib"]

[dependencies]
aa-core = { path = "../aa-core" }
aa-proto = { path = "../aa-proto" }
prost = "0.13"
pyo3 = { version = "0.24", features = ["extension-module"] }
tokio = { version = "1", features = ["net", "rt", "sync", "time", "io-util", "macros"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }

[lints]
workspace = true
