[package]
name = "aa-ffi-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python FFI bindings for Agent Assembly via PyO3"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
aa-core = { path = "../aa-core" }
aa-proto = { path = "../aa-proto" }
prost = "0.14"
pyo3 = "0.24"
tokio = { version = "1", features = ["net", "rt", "sync", "time", "io-util", "macros"] }
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pyo3 = { version = "0.24", features = ["auto-initialize"] }
tokio = { version = "1", features = ["test-util", "rt", "sync"] }

[[bench]]
name    = "sdk_bench"
harness = false

[features]
extension-module = ["pyo3/extension-module"]

[lints]
workspace = true
