[package]
name = "aa-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Control plane — policy enforcement engine and agent registry for Agent Assembly"

[dependencies]
aa-core      = { path = "../aa-core" }
aa-proto     = { path = "../aa-proto" }
aa-runtime   = { path = "../aa-runtime" }
tokio        = { version = "1", features = ["full"] }
regex        = "1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
serde_yaml   = "0.9"
arc-swap     = "1"
dashmap      = "6"
notify       = { version = "6", features = [] }
chrono       = { version = "0.4", features = ["clock", "serde"] }
chrono-tz    = "0.9"
rust_decimal = { version = "1", features = ["serde-str"] }
thiserror    = "2"
dirs         = "6"
async-trait  = "0.1"
sha2         = "0.10"
similar      = "2"
tokio-stream = "0.1"
tonic        = { version = "0.13", features = ["transport"] }
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid         = { version = "1", features = ["v4"] }
clap         = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile     = "3"

[[bin]]
name = "aa-gateway"
path = "src/main.rs"

[lints]
workspace = true
