[package]
name = "aa-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Control plane — policy enforcement engine and agent registry for Agent Assembly"

[dependencies]
aa-core      = { path = "../aa-core" }
aa-proto     = { path = "../aa-proto" }
aa-runtime   = { path = "../aa-runtime" }
tokio        = { version = "1", features = ["full"] }
regex        = "1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
serde_yaml   = "0.9"
arc-swap     = "1"
dashmap      = "6"
notify       = { version = "6", features = [] }
chrono       = { version = "0.4", features = ["clock", "serde"] }
chrono-tz    = { version = "0.9", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-str"] }
thiserror    = "2"
dirs         = "6"
async-trait  = "0.1"
sha2         = "0.10"
similar      = "2"
tracing      = "0.1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
