[package]
name = "aa-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Control plane — policy enforcement engine and agent registry for Agent Assembly"

[dependencies]
aa-core      = { path = "../aa-core", features = ["serde"] }
aa-proto     = { path = "../aa-proto" }
aa-runtime   = { path = "../aa-runtime" }
tokio        = { version = "1", features = ["full"] }
regex        = "1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
serde_yaml   = "0.9"
arc-swap     = "1"
dashmap      = "6"
ed25519-dalek = { version = "2", features = ["std"] }
hex          = "0.4"
notify       = { version = "6", features = [] }
chrono       = { version = "0.4", features = ["clock", "serde"] }
chrono-tz    = { version = "0.10", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-str"] }
thiserror    = "2"
dirs         = "6"
async-stream = "0.3"
async-trait  = "0.1"
sha2         = "0.11"
similar      = "2"
tokio-stream = "0.1"
tonic        = { version = "0.14", features = ["transport"] }
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest      = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
uuid         = { version = "1", features = ["v4", "v7"] }
clap         = { version = "4", features = ["derive"] }

[dev-dependencies]
criterion    = { version = "0.5", features = ["async_tokio"] }
tempfile     = "3"
tokio-stream = "0.1"

[[bin]]
name = "aa-gateway"
path = "src/main.rs"

[[bench]]
name    = "policy_check"
harness = false

[lints]
workspace = true
