[package]
name = "aa-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Generated protobuf/gRPC types for Agent Assembly (prost + tonic)"

[dependencies]
prost       = "0.13"
tonic       = { version = "0.13", features = ["transport"] }

[build-dependencies]
tonic-build = "0.13"

[lints]
workspace = true
