[package]
name = "aa-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Generated protobuf/gRPC types for Agent Assembly (prost + tonic)"

[dependencies]
prost       = "0.14"
tonic       = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"

[lints]
workspace = true
