[package]
name = "aa-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tokio async runtime wrapper and lifecycle management for Agent Assembly"

[dependencies]
aa-core                     = { path = "../aa-core" }
aa-proto                    = { path = "../aa-proto" }
axum                        = "0.7"
dashmap                     = "6"
uuid                        = { version = "1", features = ["v4"] }
metrics                     = "0.24"
metrics-exporter-prometheus = "0.16"
prost                       = "0.13"
serde                       = { version = "1", features = ["derive"] }
serde_json                  = "1"
toml                        = "0.8"
tokio                       = { version = "1", features = ["full"] }
tokio-util                  = { version = "0.7", features = ["rt"] }
tracing                     = "0.1"
tracing-subscriber          = { version = "0.3", features = ["json", "env-filter"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }
tower = { version = "0.4", features = ["util"] }

[lints]
workspace = true
