[package]
name = "aa-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tokio async runtime wrapper and lifecycle management for Agent Assembly"

[dependencies]
aa-core                     = { path = "../aa-core" }
aa-proto                    = { path = "../aa-proto" }
aa-proxy                    = { path = "../aa-proxy" }
axum                        = "0.7"
bitflags                    = "2"
dashmap                     = "6"
uuid                        = { version = "1", features = ["v4"] }
metrics                     = "0.24"
metrics-exporter-prometheus = "0.16"
prost                       = "0.13"
serde                       = { version = "1", features = ["derive"] }
sha2                        = "0.10"
serde_json                  = "1"
toml                        = "0.8"
tokio                       = { version = "1", features = ["full"] }
tokio-util                  = { version = "0.7", features = ["rt"] }
tonic                       = { version = "0.13", features = ["transport"] }
tracing                     = "0.1"
tracing-subscriber          = { version = "0.3", features = ["json", "env-filter"] }
which                       = "7"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }
tower = { version = "0.4", features = ["util"] }

[lints]
workspace = true
