[package]
name = "aa-devtool-sample-myeditor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Sample DevToolAdapter implementation for a fictional MyEditor — extension-point reference for AAASM-936"
publish = false

[dependencies]
aa-core      = { path = "../../aa-core", features = ["std", "serde"] }
async-trait  = "0.1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

[dev-dependencies]
tempfile = "3"
tokio    = { version = "1", features = ["macros", "rt"] }

[lints]
workspace = true
